able to display photos from fetch results, but got weird scrollbar issue

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -9,4 +9,5 @@
 
 main {
   min-height: 100vh;
+  overflow: auto;
 }
